syntax = "proto3";

package pos;

option go_package="github.com/Andrewalifb/alpha-pos-system/sales-service";

import "google/protobuf/timestamp.proto";
import "alpha-pos-system/sales-service/api/proto/common.proto"; 

// PosInvoice
message PosInvoice {
  string invoice_id = 1;
  string sale_id = 2;
  google.protobuf.Timestamp date = 3;
  double total = 4;
  double discounts = 5;
  double taxes = 6;
  string company_id = 7;
  google.protobuf.Timestamp created_at = 8;
  string created_by = 9;
  google.protobuf.Timestamp updated_at = 10;
  string updated_by = 11;
}

// Request and Response messages
message CreatePosInvoiceRequest {
  PosInvoice pos_invoice = 1;
  JWTPayload jwt_payload = 2;
}

message CreatePosInvoiceResponse {
  PosInvoice pos_invoice = 1;
}

message ReadPosInvoiceRequest {
  string invoice_id = 1;
  JWTPayload jwt_payload = 2;
}

message ReadPosInvoiceResponse {
  PosInvoice pos_invoice = 1;
}

message UpdatePosInvoiceRequest {
  PosInvoice pos_invoice = 1;
  JWTPayload jwt_payload = 2;
}

message UpdatePosInvoiceResponse {
  PosInvoice pos_invoice = 1;
}

message DeletePosInvoiceRequest {
  string invoice_id = 1;
  JWTPayload jwt_payload = 2;
}

message DeletePosInvoiceResponse {
  bool success = 1;
}

message ReadAllPosInvoicesRequest {
    JWTPayload jwt_payload = 1;
}

message ReadAllPosInvoicesResponse {
  repeated PosInvoice pos_invoices = 1;
}

// PosInvoiceService
service PosInvoiceService {
  rpc CreatePosInvoice(CreatePosInvoiceRequest) returns (CreatePosInvoiceResponse);
  rpc ReadPosInvoice(ReadPosInvoiceRequest) returns (ReadPosInvoiceResponse);
  rpc UpdatePosInvoice(UpdatePosInvoiceRequest) returns (UpdatePosInvoiceResponse);
  rpc DeletePosInvoice(DeletePosInvoiceRequest) returns (DeletePosInvoiceResponse);
  rpc ReadAllPosInvoices(ReadAllPosInvoicesRequest) returns (ReadAllPosInvoicesResponse);
}
